--- a/App Owns Data/PowerBIEmbedded_AppOwnsData/Views/Home/Index.cshtml
+++ b/App Owns Data/PowerBIEmbedded_AppOwnsData/Views/Home/Index.cshtml
@@ -1,25 +1,88 @@
 ﻿@model PowerBIEmbedded_AppOwnsData.Models.EmbedConfig
-
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div id="buttonsWrapper">
-    Select an entity to embed.<br/><br/>
+<script src="https://npmcdn.com/es6-promise@3.2.1"></script>
+<script src="~/scripts/powerbi.js"></script>
 
-    <a id="btnEmbedReport" href="~/Home/EmbedReport">Embed Report</a>
-    <br/>
-
-    <a id="btnEmbedDashboard" href="~/Home/EmbedDashboard">Embed Dashboard</a>
-    <br />
-
-    <a id="btnEmbedTile" href="~/Home/EmbedTile">Embed Tile</a>
-    <br />
-
-    <div class="infoBox">
-        <b>Nuget packages which used in this solution</b><br/>
-        Microsoft.PowerBI.API Version 2.0.3<br />
-        Microsoft.PowerBI.JavaScript Version 2.3.1<br />
+@if (!string.IsNullOrEmpty(Model.ErrorMessage))
+{
+    <div id="errorWrapper">
+        <h2>
+            Error
+        </h2>
+        <pre>
+            @Model.ErrorMessage
+        </pre>
     </div>
-</div>
+
+    return;
+}
+
+<h2>Embedded Report</h2>
+
+<div id="reportContainer"></div>
+
+<script>
+    // Read embed application token from Model
+    var accessToken = "@Model.EmbedToken.Token";
+
+    // Read embed URL from Model
+    var embedUrl = "@Html.Raw(Model.EmbedUrl)";
+
+    // Read report Id from Model
+    var embedReportId = "@Model.Id";
+
+    // Get models. models contains enums that can be used.
+    var models = window['powerbi-client'].models;
+
+    // Embed configuration used to describe the what and how to embed.
+    // This object is used when calling powerbi.embed.
+    // This also includes settings and options such as filters.
+    // You can find more information at https://github.com/Microsoft/PowerBI-JavaScript/wiki/Embed-Configuration-Details.
+    var config = {
+        type: 'report',
+        tokenType: models.TokenType.Embed,
+        accessToken: accessToken,
+        embedUrl: embedUrl,
+        id: embedReportId,
+        permissions: models.Permissions.All,
+        settings: {
+            filterPaneEnabled: true,
+            navContentPaneEnabled: true
+        }
+    };
+
+    // Get a reference to the embedded report HTML element
+    var reportContainer = $('#reportContainer')[0];
+
+    if ("@Model.Username" != "") {
+        $("#RLS").prop('checked', true);
+        $("#RLSdiv").show();
+    }
+    else
+    {
+        $("#RLS").prop('checked', false);
+        $("#RLSdiv").hide();
+    }
+
+    if ("@Model.IsEffectiveIdentityRequired.GetValueOrDefault()" == "True") {
+        $("#noRLSdiv").hide();
+        $("#RLS").removeAttr("disabled");
+        $("#RLS").change(function () {
+            if ($(this).is(":checked")) {
+                $("#RLSdiv").show(300);
+            } else {
+                $("#RLSdiv").hide(200);
+            }
+        });
+    }
+    else
+    {
+        $("#noRLSdiv").show();
+    }
+    // Embed the report and display it within the div container.
+    var report = powerbi.embed(reportContainer, config);
+</script>
